# hpxca

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
hpx/include/: parallel_container_algorithm.hpp
hpx/parallel/: container_algorithms.hpp
hpx/parallel/container_algorithms/: config.hpp  for_each.hpp  sort.hpp
hpx/parallel/container_algorithms/config/: export_definitions.hpp  version.hpp
hpx/parallel/traits/: is_range.hpp  range_traits.hpp
src/parallel/container_algorithms/: CMakeLists.txt  hpxca.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/parallel/: CMakeLists.txt
tests/unit/parallel/container_algorithms/: CMakeLists.txt
